# royals

./: Cargo.toml  LICENSE  README.md  rust-toolchain
.github/workflows/: check-code.yaml
royals_core/: Cargo.toml
royals_core/src/: action.rs  card.rs  console_player.rs  event.rs  events.rs  game_lobby.rs  game_logic.rs  game_state.rs  lib.rs  play.rs  player.rs  random_playing_computer.rs  user_name.rs  utils.rs
royals_redux_experiment/: Cargo.toml
royals_redux_experiment/src/: action.rs  common.rs  lobby_action.rs  lobby_middleware.rs  lobby_state.rs  main.rs  state.rs
royals_server/: Cargo.toml
royals_server/src/: game_lobby.rs  game_logic.rs  main.rs  player.rs  random_playing_computer.rs  remote_player.rs  utils.rs
royals_ui_bevy/: Cargo.toml  config.toml
royals_ui_bevy/src/: bevy_player.rs  events.rs  main.rs  sendable.rs  ui.rs
royals_ui_cli/: Cargo.toml
royals_ui_cli/src/: cli_player.rs  main.rs
src/: main.rs
websocket_experiment/: Cargo.toml
websocket_experiment/assets/: index.html
