[package]
name = "royals_ui_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
royals_core = { path = "../royals_core" }
itertools = "0.11.0"
bevy = { version = "0.11.3" }
bevy_egui = "0.21.0"
anyhow = "1.0.75"
