[package]
name = "royals_ui_bevy"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_renet = { version = "0.0.12" }
royals_core = { path = "../royals_core" }
itertools = "0.10.5"
bevy = { version = "0.14.0" }
bevy_egui = "0.28"
serde_json = "1.0"
