[package]
name = "websocket_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
#log = "0.4.20"
#rand = { version = "0.8.5", features = [] }
#redux-rs = { version = "0.3.3", features = ["middleware_logger", "middleware_thunk"] }
tokio = { version = "^1", features = ["full"] }
#async-trait = "0.1.69"
axum = { version = "0.6.20", features = ["ws", "headers"] }
axum-extra = { version = "0.8.0" }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
tokio-tungstenite = "0.20"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
